회원가입 페이지 i18n 적용

--- a/src/lib/translations/ko/sign_up.json
+++ b/src/lib/translations/ko/sign_up.json
@@ -1,1 +1,17 @@
-{}
+{
+	"signUp": "회원가입",
+	"goBack": "뒤로가기",
+	"next": "다음",
+	"toMainPage": "메인페이지로",
+	"title": {
+		"first": "연동할 이메일을\n입력해주세요.",
+		"second": "이메일로 발송된\n6자리 코드를 입력해주세요.",
+		"third": "그룹에서 사용할\n닉네임을 입력해주세요.",
+		"fourth": "000님, 반갑습니다.\n회원가입에 성공했습니다."
+	},
+	"placeholder": {
+		"email": "이메일을 입력해주세요.",
+		"code": "6자리 코드를 입력해주세요.",
+		"nickName": "닉네임을 입력해주세요."
+	}
+}
